Updated format of visitCount boxes and added support for updating visitCount information

--- a/TheGymApplication/TheGymApplication.csproj
+++ b/TheGymApplication/TheGymApplication.csproj
@@ -58,6 +58,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="MySqlConnector" Version="2.2.5" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <MauiXaml Update="FacilitySchedulePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
